--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -105,3 +105,14 @@ a {
     color-scheme: dark;
   }
 }
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem 2rem;
+  background: blue;
+  font-size: 2%;
+}
+
+
